[package]
name = "place"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.1.8"
csv = "1.1.6"
iter-progress = "0.8.0"
num-format = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tokio = { version = "1", features = ["full"] }
